<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.activities.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorization"
                android:layout_gravity="center"
                android:textSize="20sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_login"/>


            <EditText
                    android:id="@+id/authLoginInput"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_marginLeft="3dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_password"/>


            <EditText
                    android:id="@+id/authPasswordInput"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_marginLeft="3dp"/>

        </LinearLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="3dp"
                android:onClick="login"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_margin="3dp"
                android:onClick="goToRegistration"/>

    </LinearLayout>


</RelativeLayout>